[package]
name = "rdfs-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"
dashmap = "5.5"
async-recursion = "1.0"
log = "0.4.28"
dotenv = "0.15.0"