[package]
name = "rdfs-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.1.15", features = [ "macros", "sqlx-postgres", "runtime-tokio-rustls", "uuid" ] }
sea-orm-macros = "1.1.15"
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"
dashmap = "5.5"
async-recursion = "1.0"
log = "0.4.28"
dotenv = "0.15.0"
tracing = "0.1.41"
actix-web = "4.11.0"
futures-util = "0.3.31"
env_logger = "0.11.8"
sea-query = "0.31"
actix-multipart = "0.4"
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
